--- a/README.org
+++ b/README.org
@@ -1,13 +1,21 @@
 #+TITLE: UofG Masters DSP Project
 #+INCLUDE: "~/.doom.d/orgReportHeader.org"
 * Foreword
-This is the source code for the masters year DSP project on real time IIR filtering at the university of Glasgow.
+This is the source code for the masters year DSP project on real time IIR filtering at the university of Glasgow. The final report submitted for the assessment as well as a YouTube video demoing the final project are linked below.
+
 This read-me is currently acting as a notebook for this project and should not be seen as documentation as such.
 
 Note: Primarily these notes relate to the implementation of I2C in Firmata as well as the relevant registers of the MPU-6050 however it seems like this sensor will not be used in favour of the ADXL335 since getting I2C working with firmata is proving to be a nightmare. I will however leave my notes on the matter in here for future reference.
-
+* Links
+** [[file:Report.pdf][Submitted Report]]
+** [[https://youtu.be/p1zuRrrh6NQ][Angle Measurment Demo]]
+** [[https://youtu.be/6KL1qg4h9OE][Responsiveness Demo]]
 * Table of Contents :TOC_3:noexport:
 - [[#foreword][Foreword]]
+- [[#links][Links]]
+  - [[#submitted-report][Submitted Report]]
+  - [[#angle-measurment-demo][Angle Measurment Demo]]
+  - [[#responsiveness-demo][Responsiveness Demo]]
 - [[#reference-material][Reference Material]]
 - [[#esp-32-reference][ESP 32 Reference]]
   - [[#pin-layout][Pin Layout]]
@@ -36,7 +44,7 @@ Note: Primarily these notes relate to the implementation of I2C in Firmata as we
 ** Pin Layout
 From: [[https://circuits4you.com/2018/12/31/esp32-devkit-esp32-wroom-gpio-pinout/][PinLayout]]
 #+ATTR_ORG: :width 600
-#+ATTR_LATEX:  :width 400
+#+ATTR_LATEX:  :width 400pt
 [[file:Refference/ESP32-Pinout.jpg]]
 * SYSEX Command Syntax (I2C ect)
 ** Aditional Notes
